<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.movie_details.view.MovieDetailsFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:overScrollMode="never"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/iv_background">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_overview_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_huge"
                android:text="@string/overview"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/tv_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceBody1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_overview_title"
                tools:text="Travis Block is a shadowy Government agent who specializes in removing operatives whose covers have been exposed. He then has to uncover a deadly conspiracy within his own ranks that reaches the highest echelons of power."
                tools:visibility="visible" />

            <TextView
                android:id="@+id/tv_cast_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_normal"
                android:text="@string/top_billed_cast"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_overview"
                tools:visibility="visible" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_cast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_small"
                android:orientation="horizontal"
                android:overScrollMode="never"
                android:paddingStart="-4dp"
                android:visibility="gone"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_cast_title"
                tools:ignore="RtlSymmetry"
                tools:listitem="@layout/item_cast"
                tools:visibility="visible" />

            <ProgressBar
                android:id="@+id/pb_movie_details_info"
                android:layout_width="@dimen/size_big"
                android:layout_height="@dimen/size_big"
                android:layout_marginTop="@dimen/size_giant"
                android:indeterminateTint="@color/blue_alpha_70"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_cast_title"
                tools:visibility="visible" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <ImageView
        android:id="@+id/iv_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/background_image"
        android:foreground="@color/blue_alpha_70"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@id/guideline_background_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@color/black_alpha_60" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_poster"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/size_medium"
        android:contentDescription="@string/content_cinema_poster"
        android:scaleType="fitXY"
        android:translationY="@dimen/size_medium"
        app:layout_constraintBottom_toBottomOf="@id/iv_background"
        app:layout_constraintDimensionRatio="W,2:3"
        app:layout_constraintStart_toStartOf="@id/iv_background"
        app:layout_constraintTop_toTopOf="@id/guideline_poster_image_top"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize4Percent"
        tools:src="@drawable/preview_movie" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ellipsize="end"
        android:gravity="start|center_vertical"
        android:maxLines="2"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@id/guideline_poster_image_top"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/iv_poster"
        app:layout_constraintTop_toTopOf="@id/iv_background"
        tools:text="Lorem Ipsum: lorem ipsum" />

    <TextView
        android:id="@+id/tv_details"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/size_medium"
        android:ellipsize="end"
        android:maxLines="3"
        android:textAppearance="?attr/textAppearanceBody1"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/pb_rating"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/barrier_movie_details"
        app:layout_constraintTop_toBottomOf="@id/guideline_poster_image_top"
        tools:text="Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum " />

    <ProgressBar
        android:id="@+id/pb_rating"
        style="@style/CircularDeterminateProgressBar"
        android:layout_width="40dp"
        android:layout_height="0dp"
        android:layout_marginVertical="@dimen/size_small"
        android:background="@drawable/circle_shape"
        android:indeterminate="false"
        android:max="100"
        app:layout_constraintBottom_toBottomOf="@id/guideline_background_image"
        app:layout_constraintDimensionRatio="H,1:1"
        app:layout_constraintStart_toStartOf="@id/barrier_movie_details"
        tools:progress="65"
        tools:progressTint="#BFFF00" />

    <TextView
        android:id="@+id/tv_rating"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:textAppearance="?attr/textAppearanceBody1"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/pb_rating"
        app:layout_constraintEnd_toEndOf="@id/pb_rating"
        app:layout_constraintStart_toStartOf="@id/pb_rating"
        app:layout_constraintTop_toTopOf="@id/pb_rating"
        tools:text="65" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_small"
        android:text="@string/user_score"
        android:textAppearance="?attr/textAppearanceSubtitle1"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/pb_rating"
        app:layout_constraintStart_toEndOf="@id/pb_rating"
        app:layout_constraintTop_toTopOf="@id/pb_rating" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_movie_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:barrierDirection="end"
        app:barrierMargin="@dimen/size_normal"
        app:constraint_referenced_ids="iv_poster" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_background_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.30" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_poster_image_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.12" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/size_normal" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/size_normal" />

</androidx.constraintlayout.widget.ConstraintLayout>